--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scriptNodeRoot.js"></script>
   </body>
 </html>
