menambahkan count menang pada suwit jepang v2

--- a/LatihanDOM2/index.html
+++ b/LatihanDOM2/index.html
@@ -12,6 +12,7 @@
     <div class="container">
       <div class="info"></div>
       <div class="area-player">
+        <p class="count-human">Menang: </p>
         <ul>
           <li>
             <img src="assets/144ppi/Gunting.png" class="Gunting" />
@@ -27,6 +28,7 @@
     </div>
     <div class="area-komputer">
       <img src="assets/144ppi/Batu.png" class="img-komputer" />
+      <p class="count-comp">Menang: </p>
     </div>
     <script src="script.js"></script>
   </body>
